<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_dos_nombres_de_pais"
        />

    <EditText
        android:id="@+id/inputPais1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/pais_1"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/inputPais2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/pais_2"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/botonBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relacionar"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <LinearLayout
        android:id="@+id/resultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        >
        <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
            android:id="@+id/campoSonLimitrofes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenVertical"
            app:label="@string/son_limitrofes"
            />
        <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
            android:id="@+id/campoNecesitanTraduccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenVertical"
            app:label="@string/necesitan_traduccion"
            />
        <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
            android:id="@+id/campoSonPotencialesAliados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenVertical"
            app:label="@string/son_potenciales_aliados"
            />
    </LinearLayout>
</LinearLayout>