<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_el_nombre_de_un_pais"
        />

    <EditText
        android:id="@+id/inputPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/botonBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/resultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            >
            <!--
                El tools:visibility="visible" hace que por más que el default sea "gone", en la preview se pueda visualizar.
                Todo lo que esté dentro del namespace "tools" no será utilizado durante la ejecución.
            -->

            <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
                android:id="@+id/campoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenVertical"
                app:label="@string/nombre"
                />
            <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
                android:id="@+id/campoCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenVertical"
                app:label="@string/codigo"
                />
            <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
                android:id="@+id/campoPoblacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenVertical"
                app:label="@string/poblacion"
                />
            <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
                android:id="@+id/campoContinente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenVertical"
                app:label="@string/continente"
                />

            <ImageView
                android:id="@+id/bandera"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="@dimen/margenVertical"
                tools:ignore="ContentDescription"
                tools:src="@android:drawable/picture_frame"
                />

            <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
                android:id="@+id/campoEsPlurinacional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenVertical"
                app:label="@string/es_plurinacional"
                />

            <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
                android:id="@+id/campoEsUnaIsla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenVertical"
                app:label="@string/es_una_isla"
                />

            <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
                android:id="@+id/campoDensidadPoblacional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenVertical"
                app:label="@string/densidad_poblacional"
                />

            <ar.edu.unahur.obj2.claseBonusKotlinAndroid.widgets.CampoView
                android:id="@+id/campoVecinoMasPoblado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenVertical"
                app:label="@string/vecino_mas_poblado"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>